--- a/{{cookiecutter.repo_name}}/package.json
+++ b/{{cookiecutter.repo_name}}/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "{{ cookiecutter.github_url }}/issues"
   },
-  "homepage": "{{ cookiecutter.project_url }}"
+  "homepage": "{{ cookiecutter.project_url }}",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-compass": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.2",
+    "grunt-contrib-imagemin": "~0.2.0",
+    "grunt-contrib-jshint": "~0.6.3",
+    "grunt-grunticon": "~0.6.11",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-cssmin": "~0.6.1",
+    "grunt-contrib-concat": "~0.3.0"
+  }
 }
